styles.css
body {
    margin: 0;
    font-family: Arial, sans-serif;
    transition: background-color 0.3s, color 0.3s;
}

body.light-mode {
    background-color: #f5f5f5;
    color: #333;
}

body.dark-mode {
    background-color: #121212;
    color: #f5f5f5;
}

.topbar {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1000;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 20px;
    background-color: rgba(51, 51, 51, 0.8);
    color: #f5f5f5;
    height: 60px;
    transition: background-color 0.3s;
}

.hax-section {
    height: 100vh;
    background-image: url('https://cdn.discordapp.com/avatars/987323487343493191/97c3f70795aea49c57c0f924b44e2b5c?size=1024');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: height 0.3s;
}

.hax-section h1 {
    color: white;
    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
    font-size: 3em;
    text-align: center;
}

.content {
    background-color: #121212;
    color: #f5f5f5;
    padding-top: 20px;
}

.logo {
    font-size: 1.5em;
    font-weight: bold;
}

.menu a {
    color: #fffdfd;
    text-decoration: none;
    margin: 0 15px;
    font-size: 1em;
    transition: color 0.3s;
}

.menu a:hover {
    color: #ff6347;
}

.dark-mode-toggle {
    display: flex;
    align-items: center;
}

.switch {
    position: relative;
    display: inline-block;
    width: 34px;
    height: 20px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    transition: 0.4s;
    border-radius: 34px;
}

.slider:before {
    position: absolute;
    content: "";
    height: 12px;
    width: 12px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    transition: 0.4s;
    border-radius: 50%;
}

input:checked + .slider {
    background-color: #ff6347;
}

input:checked + .slider:before {
    transform: translateX(14px);
}

/*body {
    margin: 0;
    font-family: Arial, sans-serif;
    background-color: #121212;
    color: #f5f5f5;
    transition: background-color 0.3s, color 0.3s;
}*/


.content {
    background-color: #121212;
    color: #f5f5f5;
    padding-top: 20px;
}

header {
    background-color: #333;
    padding: 20px;
    text-align: center;
}

header h1 {
    margin: 0;
    font-size: 2em;
}

section {
    padding: 20px;
    margin: 10px;
    border-radius: 8px;
    background-color: #1e1e1e;
}

h2, h3 {
    color: #ff6347;
}

ul {
    list-style-type: none;
    padding: 0;
}

ul li {
    padding: 5px 0;
}

blockquote {
    border-left: 5px solid #ff6347;
    padding-left: 15px;
    margin: 10px 0;
}

a {
    color: #ff6347;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

main {
    padding: 20px;
    text-align: center;
}

.mr-2 {
    margin-right: .5rem;
}

.text-white {
    --tw-text-opacity: 1;
    color: rgba(255, 255, 255, var(--tw-text-opacity));
}

.font-bold {
    font-weight: 700;
}

.my-8 {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

hr {
    border-top-width: 1px;
}

.mr-2 {
    margin-right: .5rem;
}

.fa-brands, .fab {
    font-family: "Font Awesome 6 Brands";
    font-weight: 400;
}

.contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    margin-top: 2rem;
}

.contact > * + * {
    margin-top: 1rem;
}

@media (min-width: 768px) {
    .contact {
        flex-direction: row;
    }

    .contact > * + * {
        margin-top: 0;
        margin-left: 1rem;
    }
}

.typing {
        border-right: .15em solid #000;
        white-space: nowrap;
        overflow: hidden;
        animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
        color: #29c629;
    }

    @keyframes typing {
        from { width: 0; }
        to { width: 100%; }
        from { height: 100%; }
        to { height: 100%;}
    }

    @keyframes blink-caret {
        from, to { border-color: transparent; }
        50% { border-color: black; }
    }

